@@ -1,5 +1,6 @@
 package com.example.foodshop.gateway;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
@@ -7,17 +8,25 @@ import org.springframework.web.cors.reactive.CorsWebFilter;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class CorsConfig {
 
+    @Value("${frontend.url:${FRONTEND_URL:https://frontend-qpuj.onrender.com}}")
+    private String frontendUrl;
+
     @Bean
     public CorsWebFilter corsWebFilter() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOriginPatterns(Arrays.asList("*")); // Use patterns instead of origins
+        corsConfig.setAllowedOrigins(List.of(
+                frontendUrl,
+                "http://localhost:5173",
+                "http://127.0.0.1:5173"
+        ));
         corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         corsConfig.setAllowedHeaders(Arrays.asList("*"));
-        corsConfig.setAllowCredentials(true); // Allow credentials
+        corsConfig.setAllowCredentials(true);
         corsConfig.setMaxAge(3600L);
         corsConfig.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
 
